데이터 처리 파이프라인 추가